# desafio_ia_bemagro

./: .flake8  .gitignore  DOT_ENV_EXAMPLE  Makefile  README.md  binarize_images.py  divide_orthomosaic.py  model_inference.py  progress_report.md  pyproject.toml  requirements.txt  setup_pyenv.sh  train_model.py
dataset_handler/: binary_mask_generator.py  data_splitter.py  image_splitter.py  preprocess_raw_tiles.py
plant_segmenter/: dataset.py  plant_segmenter.py  train.py  u_net_trainer.py
plant_segmenter/model/: u_net.py
plant_segmenter/utils/: train_utils.py
requirements/: requirements.txt
